Fin Gestion propriété type article

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,10 @@
 @import "~admin-lte/plugins/fontawesome-free/css/all.css";
 @import "~admin-lte/dist/css/adminlte.css";
+
+.modal.fade{
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-backdrop.fade{
+    opacity: 0;
+}
