--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56488,4 +56488,10 @@ a.text-muted:hover {
 .dark-mode .dark-mode.accent-gray-dark .page-item .page-link:hover, .dark-mode .dark-mode.accent-gray-dark .page-item .page-link:focus {
   color: #3f474e;
 }
+.modal.fade{
+    background: rgba(0, 0, 0, 0.5);
+}
 
+.modal-backdrop.fade{
+    opacity: 0;
+}
